--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,20 @@ button {
 button:hover {
   background-color: #45a049;
 }
+
+.header-container {
+    display: flex;
+    justify-content: space-between; 
+    align-items: baseline;        
+    width: 100%;                  
+}
+
+h1 {
+    margin: 0;
+}
+
+.byline {
+    font-size: 1rem;
+    color: #333;
+}
+
