--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 body {
   background-color: #f4f6f9;
   display: flex;
+  flex-direction: column; /* This is the key fix! */
   justify-content: center;
   align-items: center;
   height: 100vh;
